# executorch-numpy-runtime

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  executorch-numpy-runtime-plan.md  problem-statement.md  pyproject.toml
.github/workflows/: build-wheels.yml  leak.yml  qa-gate.yml
cmake/: Kernels.cmake  RuntimePin.cmake  assert_kernels_registered.cmake  assert_usdt_probes.cmake
docs/: custom-kernels.md  lstm-op-consumer-guide.md  shared-threadpool-concurrency-handoff.md  usdt-tracepoints.md
docs/superpowers/notes/: 2026-07-16-windows-spike-findings.md
docs/superpowers/plans/: 2026-07-06-executorch-numpy-runtime.md  2026-07-08-custom-kernel-seam.md  2026-07-08-lstm-sequence-kernel.md  2026-07-10-lstm-kernel-restructure.md  2026-07-16-usdt-guard-and-windows-spike.md  2026-07-17-windows-wheels.md
docs/superpowers/specs/: 2026-07-06-executorch-numpy-runtime-design.md  2026-07-09-upstream-lstm-productionization-handoff.md  2026-07-10-lstm-kernel-restructure-design.md  2026-07-16-usdt-and-windows-wheels-design.md
examples/custom_kernels/: negate_op.cpp
examples/custom_kernels/lstm/: etnp_lstm.cpp  xnn_linear.h
executorch_numpy_runtime/: __init__.py  _api.py  errors.py  info.py
kernels/reference/: etnp_reference_ops.cpp
native_tests/: CMakeLists.txt  kernel_registration_test.cpp  leak_harness.cpp  lstm_cache_race_test.cpp  lstm_cell_test.cpp  lstm_golden.h  lstm_kernel_test.cpp  lstm_parity_test.cpp  race_harness.cpp  tsan_suppressions.txt  xnn_linear_cache_test.cpp  xnn_linear_test.cpp
scratchpad/: README.md  inspect_naive_graph.py  libm_datadep.cpp  lstm_component_bench.cpp  lstm_shape_bench.cpp  xnn_microbench.cpp
scratchpad/cell_lib_spike/: cell_hwy.cc  cell_spike.cpp
scripts/: check-usdt-notes.sh
src/binding/: dtype_map.cpp  dtype_map.h  module.cpp
src/et_core/: et_core.cpp  et_core.h
tests/: conftest.py  test_api.py  test_concurrency.py  test_constant_methods.py  test_docs.py  test_dtypes.py  test_errors.py  test_forward.py  test_input_marshal.py  test_kernel_libs.py  test_load.py  test_lstm_smoke.py  test_matrix.py  test_meta_info.py  test_parity.py  test_smoke.py  test_usdt_notes.py
tests/models/: README.md  add.pte  const_methods.pte  dtypes.pte  dynamic.pte  multi.pte  quantized.pte
tests/models/lstm/: lstm.pte  shape
third-party-notices/: README.md
tools/: _lstm_feasibility_worker.py  bench.py  bench_lstm.py  etnp_lstm_op.py  export_const_methods_probe.py  export_fixtures.py  export_lstm_bench_models.py  gen_lstm_golden.py  lstm_advisor.py  lstm_feasibility.py
