[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "executorch-numpy-runtime"
dynamic = ["version"]
description = "Torch-free numpy runtime for ExecuTorch .pte files (ExecuTorch 1.3.1, CPU)"
requires-python = ">=3.12"
dependencies = ["numpy>=1.24"]
authors = [
    { name = "Corey Cole", email = "3700879+corey-cole@users.noreply.github.com" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
bf16 = ["ml_dtypes>=0.3"]

[dependency-groups]
dev = [
    "ruff",
    "pytest-cov>=7.1.0",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.scikit-build]
wheel.py-api = "cp312"
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = ["cp312-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
test-command = "pytest {project}/tests"
test-requires = ["pytest"]
