[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "executorch-numpy-runtime"
dynamic = ["version"]
description = "Torch-free numpy runtime for ExecuTorch .pte files (ExecuTorch 1.3.1, CPU)"
requires-python = ">=3.12"
dependencies = ["numpy>=1.24"]
authors = [
    { name = "Corey Cole", email = "3700879+corey-cole@users.noreply.github.com" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "third-party-notices/*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
bf16 = ["ml_dtypes>=0.3"]

[dependency-groups]
dev = [
    "ruff",
    "pytest-cov>=7.1.0",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.scikit-build]
wheel.py-api = "cp312"
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = ["cp312-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
# Pin the glibc 2.28 floor to match the prebuilt ExecuTorch runtime (built on
# manylinux_2_28) and the qa-gate harness images, independent of cibuildwheel's
# default which tracks its own version.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-command = "pytest {project}/tests"
test-requires = ["pytest"]

# cibuildwheel does NOT repair Windows wheels by default -- there is no auditwheel there.
# _core is C++ and imports MSVCP140.dll + VCRUNTIME140_THREADS.dll, neither of which ships
# with CPython, so a machine without the VC++ Redistributable fails to import with an opaque
# DLL-load error. delvewheel treats System32-resolved DLLs as system libraries and skips them
# unless named, which is why --add-dll is required rather than optional.
# Static CRT is not an option: the prebuilt ExecuTorch .libs are /MD.
#
# build-verbosity is GLOBAL on purpose: without it the CMake log is swallowed and the
# POST_BUILD guards' STATUS lines never appear in CI -- wanted on every leg, not just Windows.
build-verbosity = 1

# cibuildwheel does NOT repair Windows wheels by default -- there is no auditwheel there.
# _core is C++ and imports MSVCP140.dll + VCRUNTIME140_THREADS.dll, neither of which ships
# with CPython, so a machine without the VC++ Redistributable fails to import with an opaque
# DLL-load error. delvewheel treats System32-resolved DLLs as system libraries and skips them
# unless named, which is why --add-dll is required rather than optional.
# Static CRT is not an option: the prebuilt ExecuTorch .libs are /MD.
#
# delvewheel is PINNED on purpose. It decides which DLLs land in the shipped wheel, so an
# unpinned upgrade could silently change the wheel's contents -- in a project that pins its
# runtime tarball by SHA256 and attests it in CI, an unpinned wheel-repair tool would be the
# loosest link in the chain. Bump procedure: raise the pin deliberately, then re-run the
# Step 4 assertion below to confirm both CRT DLLs are still vendored under the new version.
#
# NOTE: this sub-table MUST stay last in [tool.cibuildwheel] -- every key placed after this
# header would silently become Windows-only (TOML sub-table scoping).
[tool.cibuildwheel.windows]
before-build = "pip install delvewheel==1.13.0"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-dll msvcp140.dll;vcruntime140_threads.dll"
